# Face-Detector

./: .gitignore  README.md  face_detector.py  pyproject.toml  requirements.txt
tests/: test_detector.py
