[project]
name = "face_detector"
version = "0.1.0"
description = "Simple face detection using OpenCV"
requires-python = ">=3.8"
dependencies = ["opencv-python-headless>=4.8"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]
